<resources>
    <string name="app_name">Inkubator</string>
    <string name="temperature">Suhu</string>
    <string name="humidity">Kelembaban</string>
    <string name="water_level">Ketinggian Air</string>
    <string name="gecko">Leopard Gecko</string>
    <string name="ball_python">Ball Python</string>
    <string name="bearded_dragon">Bearded Dragon</string>
    <string name="male">Jantan</string>
    <string name="female">Betina</string>
    <string name="male_gecko">mGecko</string>
    <string name="female_gecko">fGecko</string>
    <string name="male_BP">mPython</string>
    <string name="female_BP">fPython</string>
    <string name="male_BD">mDragon</string>
    <string name="female_BD">fDragon</string>
    <string name="suhu">suhu</string>
    <string name="kelembaban">kelembaban</string>
    <string name="error_fetcing">Error Fetching Data</string>
    <string name="load_post_onCancelled">Load Post onCancelled</string>
    <string name="notification_granted">Izin notifikasi diberikan</string>
    <string name="notification_ungranted">Izin notifikasi tidak diberikan</string>
    <string name="about">About</string>
    <string name="name">AHMAD ROZAK SETIA NUGRAHA</string>
    <string name="prodi">JARINGAN TELEKOMUNIKASI DIGITAL</string>
    <string name="nim">2041160152</string>
    <string name="logo">Logo</string>
    <string name="reset">Reset</string>
    <string name="label_deteksi">Hasil Deteksi</string>
    <string name="object_detection">Deteksi Objek</string>
</resources>